--- a/header.html
+++ b/header.html
@@ -8,19 +8,19 @@
       <img src="/src/img/longtext_white_color_resize.png" \>
     </a>
 
-    <a role="button" id="nav-toggle" class="navbar-burger">
-      <span></span>
-      <span></span>
-      <span></span>
+    <a role="button" id="nav-toggle" class="navbar-burger" @click="toggle" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
+      <span aria-hidden="true"></span>
+      <span aria-hidden="true"></span>
+      <span aria-hidden="true"></span>
     </a>
   </div>
 
   <div id="nav-menu" class="navbar-menu">
     <div class="navbar-start">
       <a class="navbar-item" href="/about">About</a>
-      <div class="navbar-item has-dropdown is-hoverable">
+      <div data-target="more" class="navbar-item has-dropdown is-hoverable">
         <a class="navbar-link" href="/game-servers">Game Servers</a>
-        <div class="navbar-dropdown has-background-dark">
+        <div class="navbar-dropdown has-background-dark" id="more">
           <a class="navbar-item has-text-light" href="/game-servers/7-days-to-die"><img class="navbar-btn-img" src="/src/img/logo-7-days-to-die.png" alt="7 Days To Die Logo" width="20px" height="20px">7 Days to
             Die</a>
           <a class="navbar-item has-text-light" href="/game-servers/ark-survival-evolved"><img class="navbar-btn-img" src="/src/img/logo-ark-survival-evolved.png" alt="ARK: Survival Evolved Logo" width="20px" height="20px">ARK: Survival Evolved</a>
