--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
   <title>Home - metropolis.city</title>
   <link href="https://fonts.googleapis.com" rel="preconnect">
   <link href="https://fonts.gstatic.com" crossorigin rel="preconnect">
-  <link href="https://fonts.googleapis.com/css2?family=Georama:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet" disabled>
+  <link href="https://fonts.googleapis.com/css2?family=Georama:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet" media>
   <script src="https://kit.fontawesome.com/be02d7a628.js" crossorigin="anonymous" defer></script>
-  <link href="/src/css/bulma.css" rel="stylesheet" disabled>
-  <link href="/src/css/style.css" rel="stylesheet" disabled>
+  <link href="/src/css/bulma.css" rel="stylesheet" media>
+  <link href="/src/css/style.css" rel="stylesheet" media>
   <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
   <script src="/src/js/imports.js"></script>
   <link href="/src/img/m_favicon_white.png" rel="icon" type="image/png">
